# product_similarity

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  data.html  index.html  mkdocs.yml  model.html  objects.inv  pyproject.toml  requirements_torch.txt
docs/: index.md  model.md
notebooks/: product_similarity_main.ipynb
search/: search_index.js  search_index.json
src/data/: etl.py
src/model/: nlp.py  transformers.py
